@@ -496,10 +496,10 @@ int main( int argc, char* argv[] ) {
 
       //** prun
       //Pdriver.options()->setString("nc_outputSampleName", "user.%nickname%.SAtest.%in:name[2]%.v0");
-      Pdriver.options()->setString("nc_outputSampleName", "user.tripiana.SM_BB_800_1.SA.v1");
+      Pdriver.options()->setString("nc_outputSampleName", "user.tripiana.SM_BB_800_1.SA.v2");
       Pdriver.options()->setDouble("nc_disableAutoRetry", 1);
-      Pdriver.options()->setString("nc_nFilesPerJob", "1"); //By default, split in as few jobs as possible
-      Pdriver.options()->setDouble("nc_nFiles", 5);
+      Pdriver.options()->setDouble("nc_nFilesPerJob", 1); //By default, split in as few jobs as possible
+      Pdriver.options()->setDouble("nc_nFiles", 1);
       Pdriver.options()->setDouble("nc_mergeOutput", 0); //run merging jobs for all samples before downloading (recommended) 
       sh.setMetaString ("nc_grid_filter", "*.root*");
 
